# docs/swagger.yaml
@@ -3,6 +3,10 @@ definitions:
     properties:
       district:
         type: string
+      latitude:
+        type: string
+      longitude:
+        type: string
       municipality:
         type: string
       province:
@@ -125,6 +129,10 @@ definitions:
         type: integer
       kycID:
         type: integer
+      latitude:
+        type: string
+      longitude:
+        type: string
       municipality:
         type: string
       province:
@@ -214,6 +222,30 @@ definitions:
     - ColdStoreConstruction
     - AssistanceInMarketing
     - InvestmentService
+  models.User:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      email:
+        type: string
+      id:
+        type: integer
+      is_kyc:
+        type: boolean
+      kyc:
+        $ref: '#/definitions/models.Kyc'
+      password:
+        type: string
+      profile_picture:
+        type: string
+      updatedAt:
+        type: string
+    required:
+    - email
+    - password
+    type: object
   models.WorkingArea:
     properties:
       activities:
@@ -249,6 +281,29 @@ paths:
         "200":
           description: Sucessfully logged out.
       summary: Logout user
+      tags:
+      - Users
+  /search:
+    get:
+      consumes:
+      - application/json
+      description: Search users by email using Elasticsearch.
+      parameters:
+      - description: Search query
+        in: query
+        name: q
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of users
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+      summary: Search users
       tags:
       - Users
   /user/all:
